Add AJAX for Department delete

--- a/PeopleProTraining/PeoplePro/Views/Departments/_AddEditModal.cshtml
+++ b/PeopleProTraining/PeoplePro/Views/Departments/_AddEditModal.cshtml
@@ -6,7 +6,7 @@
             <div class="modal-header">
                 <h3 id="departmentModalTitle" class="modal-title">Add Department</h3>
                 <button class="close" type="button" data-dismiss="modal">
-                    <span>x</span>
+                    <span>&times;</span>
                 </button>
             </div>
             <form asp-action="Add" class="modal-body">
@@ -23,7 +23,7 @@
             </form>
             <div class="modal-footer">
                 <button class="btn btn-secondary" type="button" data-dismiss="modal">Close</button>
-                <button class="btn btn-primary" type="button" data-save="ajax-modal">Save</button>
+                <button class="btn btn-primary" type="button" data-save="add-modal">Save</button>
             </div>
         </div>
     </div>
