--- a/PeopleProTraining/PeoplePro/Views/Departments/Details.cshtml
+++ b/PeopleProTraining/PeoplePro/Views/Departments/Details.cshtml
@@ -62,6 +62,6 @@
     </table>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
+    <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-light">Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
