--- a/PeopleProTraining/PeoplePro/Views/Departments/Index.cshtml
+++ b/PeopleProTraining/PeoplePro/Views/Departments/Index.cshtml
@@ -8,9 +8,9 @@
 
 <h1>Index</h1>
 
-<p>
+@*<p>
     <a asp-action="Create">Create New</a>
-</p>
+</p>*@
 <table class="table">
     <thead>
         <tr>
@@ -34,15 +34,15 @@
                     @Html.DisplayFor(modelItem => item.Building.Name)
                 </td>
                 <td>
-                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                    <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                    <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-sm btn-light">Edit</a>
+                    <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-sm btn-info">Details</a>
+                    <button class="btn btn-sm btn-danger" type="button" data-toggle="delete-modal" data-target="#confirmModal" data-url="@Url.Action("Delete")/@item.Id">Delete</button>
                 </td>
             </tr>
         }
     </tbody>
 </table>
 
-<button class="btn btn-primary btn-block" type="button" data-toggle="ajax-modal" data-target="#departmentModal" data-url="@Url.Action("ShowDepartmentModal")">
+<button class="btn btn-primary btn-block" type="button" data-toggle="add-modal" data-target="#departmentModal" data-url="@Url.Action("Add")">
     Add Department
 </button>
