--- a/DatabaseSite/DatabaseSite/Views/Departments/Index.cshtml
+++ b/DatabaseSite/DatabaseSite/Views/Departments/Index.cshtml
@@ -32,7 +32,7 @@
           $(document).on('click', '#AddButton', function () {
             var a = $("#DepNameInput").val();
             $.ajax({
-                url: "../../AjaxTest/FirstAjax",
+                url: "../../Ajax/FirstAjax",
                 type: "POST",
                 data: { name: a },
                 success: function (response) {
@@ -58,7 +58,7 @@
         $(document).on('click', '#OpenButton', function () {
             var b = $(this);
             $.ajax({
-                url: "../../AjaxTest/CreatePrompt",
+                url: "../../Ajax/CreatePrompt",
                 type: "GET",
                 success: function (response) {
                     $("#OpenButton").after(response);
