--- a/DatabaseSite/DatabaseSite/Views/Shared/EditorTemplates/Login.cshtml
+++ b/DatabaseSite/DatabaseSite/Views/Shared/EditorTemplates/Login.cshtml
@@ -2,13 +2,13 @@
 <div class="form-horizontal">
     <div class="form-group">
         <div class="col-md-10">
-            @Html.TextBoxFor(s => s.UserName, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.TextBoxFor(s => s.UserName, new { autocomplete = "off", htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.UserName, "", new { @class = "text-danger" })
         </div>
     </div>
     <div class="form-group">
         <div class="col-md-10">
-            @Html.TextBoxFor(s => s.Password, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.TextBoxFor(s => s.Password, new { autocomplete = "off", htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
         </div>
     </div>
