--- a/DatabaseSite/DatabaseSite/Views/Shared/Partials/Success.cshtml
+++ b/DatabaseSite/DatabaseSite/Views/Shared/Partials/Success.cshtml
@@ -1,8 +1,8 @@
 ﻿
 @{
-    ViewBag.Title = "Log Out";
+    ViewBag.Title = "Log In";
 }
 
-<h2>You've been signed out</h2>
+<h2>You're Signed In!</h2>
 @Html.ActionLink("Return to database", "Index", "Employees")
 
