--- a/DatabaseSite/DatabaseSite/Views/Shared/_Layout.cshtml
+++ b/DatabaseSite/DatabaseSite/Views/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
                     <li>@Html.ActionLink("Departments", "Index", "Departments")</li>
                     <li>@Html.ActionLink("Buildings", "Index", "Buildings")</li>
                     <li>@Html.ActionLink("Employees", "Index", "Employees")</li>
-                    <li>@Html.ActionLink((string) ViewBag.Login, (string) ViewBag.LoginAction, "Login")</li>
+                    <li id="LoginLink">@Html.ActionLink((string) ViewBag.Login, (string) ViewBag.LoginAction, "Login")</li>
                 </ul>
             </div>
         </div>
