--- a/PeopleProTraining/PeoplePro/Views/Departments/_AddEditModal.cshtml
+++ b/PeopleProTraining/PeoplePro/Views/Departments/_AddEditModal.cshtml
@@ -4,15 +4,15 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h3 id="departmentModalTitle" class="modal-title">Add Department</h3>
+                <h3 class="modal-title">@ViewBag.AddOrEdit Department</h3>
                 <button class="close" type="button" data-dismiss="modal">
                     <span>&times;</span>
                 </button>
             </div>
-            <form asp-action="Add" class="modal-body">
+            <form asp-action="@ViewBag.AddOrEdit" class="modal-body">
                 <div class="form-group">
                     <label asp-for="Name"></label>
-                    <input asp-for="Name" class="form-control" autofocus />
+                    <input asp-for="Name" class="form-control" />
                     <span asp-validation-for="Name" class="text-danger"></span>
                 </div>
                 <div class="form-group">
@@ -23,7 +23,7 @@
             </form>
             <div class="modal-footer">
                 <button class="btn btn-secondary" type="button" data-dismiss="modal">Close</button>
-                <button class="btn btn-primary" type="button" data-save="add-modal">Save</button>
+                <button class="btn btn-primary" type="button" data-save="@ViewBag.AddOrEdit-modal">Save</button>
             </div>
         </div>
     </div>
