--- a/DatabaseSite/DatabaseSite/Views/Departments/Create.cshtml
+++ b/DatabaseSite/DatabaseSite/Views/Departments/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model DatabaseSite.Models.Department
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Add Department";
 }
 
 <h2>Create</h2>
