--- a/DatabaseSite/DatabaseSite/Views/Departments/Details.cshtml
+++ b/DatabaseSite/DatabaseSite/Views/Departments/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model DatabaseSite.Models.Department
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Department Details";
 }
 
 <h2>Department Details</h2>
