--- a/DatabaseSite/DatabaseSite/Views/Departments/Edit.cshtml
+++ b/DatabaseSite/DatabaseSite/Views/Departments/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model DatabaseSite.Models.Department
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Edit Department";
 }
 
 <h2>Edit</h2>
