--- a/DatabaseSite/DatabaseSite/Views/Employees/Index.cshtml
+++ b/DatabaseSite/DatabaseSite/Views/Employees/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<DatabaseSite.Models.Employee>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Employees";
 }
 
 <h2>Index</h2>
