--- a/DatabaseSite/DatabaseSite/Views/Shared/EditorTemplates/Login.cshtml
+++ b/DatabaseSite/DatabaseSite/Views/Shared/EditorTemplates/Login.cshtml
@@ -12,12 +12,8 @@
             @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
         </div>
     </div>
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" class="btn btn-default"/>
-        </div>
-    </div>
+
     <div>
-        <button id="LoginButton">Click</button>
+        <button class="btn btn-default" id="LoginButton">Submit</button>
     </div>
 </div>
