--- a/DatabaseSite/DatabaseSite/Views/Buildings/Delete.cshtml
+++ b/DatabaseSite/DatabaseSite/Views/Buildings/Delete.cshtml
@@ -1,7 +1,7 @@
 ﻿@model DatabaseSite.Models.Building
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Delete Building";
 }
 
 <h3>Are you sure you want to delete this building?</h3>
@@ -11,9 +11,9 @@
     @using (Html.BeginForm()) {
         @Html.AntiForgeryToken()
 
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
-        </div>
+    <div class="form-actions no-color">
+        @Html.ActionLink("Back to List", "Index") |
+        <input type="submit" value="Delete" class="btn btn-default" />
+    </div>
     }
 </div>
