--- a/DatabaseSite/DatabaseSite/Views/Buildings/Details.cshtml
+++ b/DatabaseSite/DatabaseSite/Views/Buildings/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model DatabaseSite.Models.Building
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Building Details";
 }
 
 <h2>Building Details</h2>
