--- a/DatabaseSite/DatabaseSite/Views/Departments/Delete.cshtml
+++ b/DatabaseSite/DatabaseSite/Views/Departments/Delete.cshtml
@@ -1,7 +1,7 @@
 ﻿@model DatabaseSite.Models.Department
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Delete Department";
 }
 
 <h2>Delete</h2>
@@ -13,9 +13,9 @@
     @using (Html.BeginForm()) {
         @Html.AntiForgeryToken()
 
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
-        </div>
+    <div class="form-actions no-color">
+        @Html.ActionLink("Back to List", "Index") |
+        <input type="submit" value="Delete" class="btn btn-default" /> 
+    </div>
     }
 </div>
