--- a/DatabaseSite/DatabaseSite/Views/Employees/Create.cshtml
+++ b/DatabaseSite/DatabaseSite/Views/Employees/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model DatabaseSite.Models.Employee
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Add Employee";
 }
 
 <h2>Create</h2>
@@ -32,7 +32,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.DepartmentId, "DepartmentId", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.DepartmentId, "Department", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("DepartmentId", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.DepartmentId, "", new { @class = "text-danger" })
@@ -40,7 +40,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.BuildingId, "BuildingId", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.BuildingId, "Building", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("BuildingId", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.BuildingId, "", new { @class = "text-danger" })
