--- a/DatabaseSite/DatabaseSite/Views/Employees/Delete.cshtml
+++ b/DatabaseSite/DatabaseSite/Views/Employees/Delete.cshtml
@@ -1,7 +1,7 @@
 ﻿@model DatabaseSite.Models.Employee
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Delete Employee";
 }
 <h3>Are you sure you want to delete this employee?</h3>
 <div>
@@ -10,9 +10,9 @@
     @using (Html.BeginForm()) {
         @Html.AntiForgeryToken()
 
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
-        </div>
+    <div class="form-actions no-color">
+        @Html.ActionLink("Back to List", "Index") | 
+        <input type="submit" value="Delete" class="btn btn-default" /> 
+    </div>
     }
 </div>
