--- a/DatabaseSite/DatabaseSite/Views/Employees/Details.cshtml
+++ b/DatabaseSite/DatabaseSite/Views/Employees/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model DatabaseSite.Models.Employee
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Employee Details";
 }
 
 <h2>Employee Details</h2>
